--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property="og:description" content="Elite Data Analytics Portfolio showcasing dashboards, BI projects, and international job readiness.">
 <meta property="og:type" content="website">
 <meta property="og:image" content="images/incon.jpg">
-<link rel="icon" href="images/incon.jpg">
+<link rel="icon" href="incon.jpg">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Arjun Keeleri | Data Analyst Portfolio</title>
@@ -101,7 +101,7 @@ display:flex;align-items:center;justify-content:center;text-align:center;padding
 <!-- HERO -->
 <section class="hero">
 <div>
-<img src="images/arjun.png" class="profile" alt="Arjun">
+<img src="arjun.png" class="profile" alt="Arjun">
 <h1>Arjun Keeleri</h1>
 <div class="typing" id="typing"></div>
 <div class="cta">
@@ -186,3 +186,4 @@ document.querySelectorAll('.fade').forEach(el=>observer.observe(el))
 
 </body>
 </html>
+
